deploy/yaml/shared/shared-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: shared-gateway
spec:
  selector:
    istio: ingressgateway #共用istio-system的namespace下自带ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
