deploy/yaml/shared/shared-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shared-gateway-route
spec:
  hosts:
  - "127.0.0.1"
  gateways:
  - shared-gateway
  http:
  - name: "gateway-routes"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: portal.default.svc.cluster.local
